[package]
name = "carthage_rust_sdk_generator"
description = "Generator for Carthage Software Development Kit for Rust"
version = "0.0.0"
authors = ["Saif Eddin Gmati <azjezz@protonmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { "version" = "1.0", features = ["full"] }
prettyplease = "0.2.10"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
syn = { version = "2.0", features = ["full", "visit-mut"] }
serde_json = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[[bin]]
name = "carthage_rust_sdk_generator"
path = "src/main.rs"
